namespace _StoryGame.Data.Animator
{
    public static class AnimatorConst
    {
        public const string GatherHighTrigger = "gather_high_trigger";
        public const string GatherMidTrigger = "gather_mid_trigger";
        public const string GatherLowTrigger = "gather_low_trigger";
        public const string IsGatherHigh = "is_gather_high";
    }
}
