namespace _StoryGame.Gameplay.Anima.Data.Interactables
{
    public static class InteractableTriggerName
    {
        public const string GatherLow = "gather_low_trigger";
        public const string GatherMid = "gather_mid_trigger";
        public const string GatherHigh = "gather_high_trigger";
    }
}
